<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">登陆者</string>
    
    <string name="text_account">账户</string>
    <string name="text_password">密码</string>
    <string name="text_ip">IP</string>
    
    <string name="info_account">用户</string>
    <string name="info_time">截止</string>
    <string name="info_total">总流量(公网)</string>
    <string name="info_used">已用流量(公网)</string>
    <string name="info_remained">剩余流量(公网)</string>
    <string name="info_schoolused">已用流量(校园网)</string>
    <string name="info_money">剩余金额</string>
    
    <string name="text_loading_title">Loading</string>
    <string name="text_loading">正在获取</string>
    
    <string name="btn_text_submit">提交</string>
    <string name="btn_ok">确定</string>
    <string name="btn_ip">重新获取IP</string>
    <string name="action_ip">获取上次登录IP</string>
    <string name="action_settings">设置</string>
    
    <string name="success_login">登陆成功</string>
    <string name="success_logout">下线成功</string>
    
    <string name="error_ip">获取IP失败</string>
    <string name="error_login">登陆失败</string>
    <string name="error_logout">下线失败</string>
    <string name="error_account">获取账户信息失败</string>
    <string name="msg_online">你已经在线</string>
    
</resources>
