<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    tools:context="com.example.helloandroid.MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="130dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="10dp" >
		
				<TextView
		            android:layout_width="130dp"
		            android:layout_height="wrap_content"
		            android:text="@string/info_account"
		            android:textSize="16sp" />
				
				<TextView
            		android:id="@+id/info_account"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:textSize="16sp" />
		
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="10dp" >
		
				<TextView
		            android:layout_width="130dp"
		            android:layout_height="wrap_content"
		            android:text="@string/info_used"
		            android:textSize="16sp" />
				
				<TextView
            		android:id="@+id/info_used"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:textSize="16sp" />
		
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="10dp" >
		
				<TextView
		            android:layout_width="130dp"
		            android:layout_height="wrap_content"
		            android:text="@string/info_remained"
		            android:textSize="16sp" />
				
				<TextView
            		android:id="@+id/info_remained"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:textSize="16sp" />
		
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="10dp" >
		
				<TextView
		            android:layout_width="130dp"
		            android:layout_height="wrap_content"
		            android:text="@string/info_money"
		            android:textSize="16sp" />
				
				<TextView
            		android:id="@+id/info_money"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:textSize="16sp" />
		
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="10dp" >
		
				<TextView
		            android:layout_width="130dp"
		            android:layout_height="wrap_content"
		            android:text="@string/info_schoolused"
		            android:textSize="16sp" />
				
				<TextView
            		android:id="@+id/info_schoolused"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:textSize="16sp" />
		
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="10dp" >
		
				<TextView
		            android:layout_width="130dp"
		            android:layout_height="wrap_content"
		            android:text="@string/info_total"
		            android:textSize="16sp" />
				
				<TextView
            		android:id="@+id/info_total"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:textSize="16sp" />
		
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="10dp" >
		
				<TextView
		            android:layout_width="130dp"
		            android:layout_height="wrap_content"
		            android:text="@string/info_time"
		            android:textSize="16sp" />
				
				<TextView
            		android:id="@+id/info_time"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:textSize="16sp" />
		
		    </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Spinner
        android:id="@+id/spinner_method"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:entries="@array/spinner_method" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/text_account"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/text_ip"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:onClick="submit"
            android:padding="10dp"
            android:text="@string/btn_text_submit"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_ip"
            android:layout_width="165dp"
            android:layout_height="60dp"
            android:onClick="getIP"
            android:padding="10dp"
            android:text="@string/btn_text_ip"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>